--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - userName: Klosw
+          - userName: cdn-stray
             repoName: Box
             branchName: main
             
@@ -62,7 +62,7 @@ jobs:
              sed -i "/versionName/s#[0-9a-zA-Z_\.\'\"-]\+\$#\'${{ env.tag }}\'#" app/build.gradle
              sed -i "/android:text=/s#=\"#=\"${{ env.tag }}\\\\n\\\\n#" app/src/main/res/layout/dialog_about.xml
           fi 
-          sed -i 's/o0HalfLife0o\/TVBoxOSC/Klosw\/BuildTVBoxOSC/g' app/src/main/java/com/github/tvbox/osc/util/Github.java
+          sed -i 's/o0HalfLife0o\/TVBoxOSC/cdn-stray\/BuildTVBoxOSC/g' app/src/main/java/com/github/tvbox/osc/util/Github.java
 
           echo 'crosswalk源，防挂'
           if grep -q 'crosswalk' build.gradle; then
